0.33    
        Test overhauls - you don't need to run the configuration step in
          order to run the tests now, but you do need to have DBD::SQLite
          for most of them.
        Fixed template bug in display_metadata.tt that was stopping map
          links being displayed for nodes with no address data (spotted
          by Steve Jolly).
	Remove inline style from recent_changes.tt. You will need to add
	  the styles table#recentchanges, td.recentchanges_meta,
	  td.recentchanges_user, td.recentchanges_node_name and
	  td.recentchanges_comment to your stylesheets.

0.32    7 June 2004
        Change auto-creating behaviour of index nodes (categories and
	  locales): instead of being created on access they are created
	  when the referring node is committed. This fixes compliance with
	  RFC 2616 section 9.1.1 and prevents corrupted index nodes being
	  created accidentally.

0.31    09 May 2004
        Created a new macro to allow the embedding of RSS feeds into
          pages, using CGI::Wiki::Plugin::RSS::Reader. This allows you
          to do this to produce a list of up to ten hyperlinks:
            @RSS [http://example.com/example.rss]
       
        Numerous template tweaks to comply with the W3C's Web Content 
          Accessibility Guidelines (http://www.w3.org/TR/WAI-WEBCONTENT/):
          - summaries for all HTML tables
          - labels for all form input elements and some textual additions 
            to templates, such as '/' separators between navbar items, 
            because the guidelines specify links should not only be 
            separated by whitespace. If you don't want these to appear,
            put the following in your stylesheet and they'll be hidden by 
            CSS (but will still appear for people using textual browsers or 
            screen readers): ".hidden { display: none }".
          - the "lang" element (a two-letter code identifying the language 